[gd_scene load_steps=16 format=3 uid="uid://joqju5gkcy0j"]

[ext_resource type="Script" uid="uid://ct4qw6sp5c36c" path="res://stuff/game_stuff/main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://ltwhxc6oap2c" path="res://stuff/game_stuff/systems/dialog/dialogue_drawer.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://qtxb7q4nkvo5" path="res://stuff/game_stuff/checks/active_check_animation.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://ckyk7e3k3nyb6" path="res://stuff/game_stuff/scene/break_room.tscn" id="4_3l2cm"]
[ext_resource type="PackedScene" uid="uid://njfpmdjc3qex" path="res://stuff/game_stuff/inventory/inventory_ui.tscn" id="4_inventory"]
[ext_resource type="Script" uid="uid://cej20bjb2xtc4" path="res://stuff/game_stuff/inventory/inventory_variables_master_sheet.gd" id="6_debug_inv"]
[ext_resource type="Texture2D" uid="uid://d0lc3js7v5jqg" path="res://stuff/raw_imports/ref.png" id="6_tiyvg"]
[ext_resource type="Script" uid="uid://djj8eqayat207" path="res://stuff/game_stuff/energy/energy_variable_master_sheet.gd" id="7_debug_energy"]
[ext_resource type="PackedScene" path="res://stuff/game_stuff/energy/energy_ui.tscn" id="7_energy"]
[ext_resource type="PackedScene" uid="uid://dc3q0aepimx7t" path="res://stuff/game_stuff/scene/innterogation_room.tscn" id="9_c0q6h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tiyvg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwo5x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltudg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1nwt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6cyta"]

[node name="main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="DebugInventory" type="Node" parent="."]
script = ExtResource("6_debug_inv")

[node name="DebugEnergy" type="Node" parent="."]
script = ExtResource("7_debug_energy")

[node name="break_room" parent="." instance=ExtResource("4_3l2cm")]

[node name="ExpandedInventoryUI" parent="break_room/break_room" index="5"]
offset_left = -320.0
offset_right = 0.0

[node name="innterogation_room" parent="." instance=ExtResource("9_c0q6h")]

[node name="BG" parent="innterogation_room" index="0"]
position = Vector2(960, 538)

[node name="Chell" parent="innterogation_room/BG/Character" index="1"]
visible = true

[node name="Eleanor" parent="innterogation_room/BG/Character" index="2"]
visible = false

[node name="HUD" type="CanvasLayer" parent="."]

[node name="DialogueDrawer" parent="HUD" instance=ExtResource("1_ig7tw")]

[node name="start_interrogation" type="Button" parent="HUD"]
anchors_preset = -1
anchor_left = 0.40260416
anchor_top = 0.26666668
anchor_right = 0.6479167
anchor_bottom = 0.8046296
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tiyvg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bwo5x")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltudg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_n1nwt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6cyta")
metadata/_edit_use_anchors_ = true

[node name="ActiveCheckAnimation" parent="HUD" instance=ExtResource("3_h2yge")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="restart_scene_button" type="Button" parent="HUD/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 48
text = "Restart scene"

[node name="EnergyUI" parent="HUD" instance=ExtResource("7_energy")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="InventoryUI" parent="HUD" instance=ExtResource("4_inventory")]

[node name="TextureRect" type="TextureRect" parent="HUD"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -18.0
offset_right = 32.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_tiyvg")
expand_mode = 1
stretch_mode = 6

[connection signal="active_check_ended" from="HUD/DialogueDrawer" to="." method="_on_dialogue_drawer_active_check_ended"]
[connection signal="dialogue_ended" from="HUD/DialogueDrawer" to="." method="_on_dialogue_drawer_dialogue_ended"]
[connection signal="pressed" from="HUD/start_interrogation" to="." method="_on_game_demo_pressed"]
[connection signal="pressed" from="HUD/MarginContainer/restart_scene_button" to="." method="_on_restart_scene_button_pressed"]

[editable path="break_room"]
[editable path="innterogation_room"]
[editable path="innterogation_room/BG/Character"]
[editable path="innterogation_room/BG/Character/Briar"]
[editable path="innterogation_room/BG/Character/Chell"]
[editable path="innterogation_room/BG/Character/Eleanor"]
[editable path="innterogation_room/BG/Character/Prudence"]
[editable path="innterogation_room/BG/Character/Rachel"]
